photosynthesis-main/archway-main/ci/titus-1-bigdigger.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: titus-1-bigdipper
  namespace: explorers
spec:
  ports:  
  - port: 3000
    name: http
    targetPort: 3000
  selector:    
    app.kubernetes.io/name: titus-1-bigdipper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titus-1-bigdipper
  namespace: explorers
  labels:    
    app.kubernetes.io/name: titus-1-bigdipper
spec:
  selector:
    matchLabels:      
      app.kubernetes.io/name: titus-1-bigdipper
  replicas: 1
  template:
    metadata:
      labels:        
        app.kubernetes.io/name: titus-1-bigdipper
    spec:
      containers:
        - name: titus-1-bigdipper
          image: drewstaylor/bigdipper:1.0.0-archway
          imagePullPolicy: Always
          ports:        
          - containerPort: 3000
            name: http
          resources:
            {}
      terminationGracePeriodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titus-1-bigdipper
  namespace: explorers
  labels:    
    app.kubernetes.io/name: titus-1-bigdipper
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: explorer.titus-1.archway.tech
    http:
      paths:
      - backend:
          service:
            name: titus-1-bigdipper
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - explorer.titus-1.archway.tech
    secretName: titus-1-bigdipper-cert
