photosynthesis-main/archway-main/ci/titus-1-faucet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: titus-1-faucet-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: titus-1-faucet-ingress
  namespace: archway
spec:
  rules:
  - host: faucet.titus-1.archway.tech
    http:
      paths:
      - backend:
          service:
            name: titus-1-faucet
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - faucet.titus-1.archway.tech
    secretName: titus-1-faucet-cert
